--- a/style.css
+++ b/style.css
@@ -1,52 +1,46 @@
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
-html,
-body,
-.wrapper {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 
 body {
   font-family: sans-serif;
-  background-color: #262a10;
+  background-color: #4f00bd;
 }
 
 .wrapper {
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-top: 80px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 header {
   text-align: center;
-  padding: 20px;
-  padding-top: 0px;
-  color: #a9714b;
+  color: #000000;
+  padding-top: 50px;
+  
 }
 
 .card {
-  background-color: #54442b;
+  background-color: #0b1b58;
+  color: #fff200;
+  Text-align: center;
+  font-size: 18px;
   border-radius: 15px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: #e8985e;
-  font-size: 18px;
   margin: 0 auto;
-  max-width: 800px;
   padding: 30px 40px;
+  /* box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px; */
+  max-width: 800px;
 }
 
 .card-header::after {
-  content: " ";
   display: block;
-  width: 100%;
   background: #141204;
+  /* content: " "; */
+  width: 100%;
   height: 2px;
 }
 
@@ -59,7 +53,7 @@ header {
 }
 
 .card-footer::before {
-  content: " ";
+  /* content: " "; */
   display: block;
   width: 100%;
   background: #141204;
@@ -67,14 +61,16 @@ header {
 }
 
 .card-footer::after {
-  content: " ";
+  /* content: " "; */
   display: block;
   clear: both;
 }
 
-.btn {
-  border: none;
-  background-color: #262a10;
+.bottonBackground {
+  background-color: #000000;
+  /* border: none; */
+  text-align: center;
+  cursor: pointer;  
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -84,8 +80,6 @@ header {
   line-height: 22px;
   margin: 16px 16px 16px 20px;
   padding: 14px 34px;
-  text-align: center;
-  cursor: pointer;
 }
 
 button[disabled] {
@@ -98,29 +92,25 @@ button[disabled] {
 }
 
 #password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
   display: block;
-  width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
-  font-size: 1.2rem;
+  background-color: beige;
+  border: 5px solid #262a10;
   text-align: center;
+  font-size: 20px;
+  width: 100%;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 85px;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #262a10;
   border-radius: 6px;
-  resize: none;
   overflow: hidden;
-  background-color: beige;
+  /* resize: none; */
 }
 
 @media (max-width: 690px) {
-  .btn {
+  .bottonBackground {
     font-size: 1rem;
     margin: 16px 0px 0px 0px;
     padding: 10px 15px;
@@ -132,7 +122,7 @@ button[disabled] {
 }
 
 @media (max-width: 500px) {
-  .btn {
+  .bottonBackground {
     font-size: 0.8rem;
   }
 }
